cambios para swagger y cambios en endpoints
